<resources>
    <string name="app_name">DiamondMessage</string>
    <string name="welcome_title">Welcome</string>
    <string name="welcome_description">Diamond message</string>

    <string name="common_login_title">Login</string>
    <string name="common_register_title">Register</string>
    <string name="common_username">Username</string>
    <string name="common_show">Show</string>
    <string name="common_password">Password</string>
    <string name="common_email">Email</string>
    <string name="common_firstname">First name</string>
    <string name="common_lastname">Last name</string>
    <string name="common_hide">Hide</string>
    <string name="common_ok">OK</string>

    <string name="auth_password_valid">Password is at least 8 characters.</string>
    <string name="auth_email_valid">Email invalid.</string>
    <string name="auth_forgot_password_title">Forgot password</string>
    <string name="auth_register_and_login">Register &amp; Login</string>
    <string name="register_fail_title">Register error</string>

    <string name="chat_detail_send_button_title">Send</string>
    <string name="chat_detail_write_a_message">Write a message</string>

    <string name="setting_logout_title">Log out</string>
    <string name="setting_account_title">Account setting</string>
    <string name="setting_language_title">Language</string>
    <string name="setting_about_us_title">About us</string>
    <string name="setting_notifications_title">Notifications</string>
    <string name="setting_title">Settings</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_users">Users</string>
    <string name="login_screen_to_continue">To continue</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_password_description">Type your email in field  below to reset password.</string>
    <string name="common_confirm_password">Confirm password</string>
    <string name="auth_confirm_password_valid">Confirmation password  not same as password.</string>

</resources>
