<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginStart="@dimen/_23dp"
    android:layout_marginEnd="@dimen/_23dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:background="@color/white"
    android:focusable="true">

    <include layout="@layout/actionbar_back"/>

    <ImageView
        android:id="@+id/fragRegister_ivLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_64dp"
        android:background="@drawable/ic_logo_start_screen"
        android:layout_width="@dimen/_36dp"
        android:layout_height="@dimen/_36dp" />

    <TextView
        android:id="@+id/fragRegister_tvTitle"
        android:text="@string/common_register_title"
        android:textSize="48sp"
        app:layout_constraintStart_toEndOf="@id/fragRegister_ivLogo"
        app:layout_constraintTop_toTopOf="@id/fragRegister_ivLogo"
        app:layout_constraintBottom_toBottomOf="@id/fragRegister_ivLogo"
        android:layout_marginStart="@dimen/_10dp"
        android:textColor="@color/mainColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        android:scrollbars="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragRegister_tvTitle"
        app:layout_constraintBottom_toTopOf="@id/fragRegister_tvRegister"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/fragRegister_tvFirstNameTitle"
                android:layout_marginTop="@dimen/_24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/common_firstname"
                android:textColor="@color/black_3"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/fragRegister_etFirstName"
                android:backgroundTint="@color/mainColor"
                android:textColor="@color/black_3"
                android:paddingTop="@dimen/_12dp"
                android:paddingBottom="@dimen/_12dp"
                android:textSize="26sp"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@+id/fragRegister_tvFirstNameTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/fragRegister_tvLastNameTitle"
                android:textColor="@color/black_3"
                android:text="@string/common_lastname"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragRegister_etFirstName" />


            <EditText
                android:id="@+id/fragRegister_etLastName"
                android:backgroundTint="@color/mainColor"
                android:textColor="@color/black_3"
                android:paddingTop="@dimen/_12dp"
                android:paddingBottom="@dimen/_12dp"
                android:textSize="26sp"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@id/fragRegister_tvLastNameTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/fragRegister_tvEmailTitle"
                android:layout_marginTop="@dimen/_24dp"
                app:layout_constraintTop_toBottomOf="@id/fragRegister_etLastName"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/common_email"
                android:textColor="@color/black_3"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/fragRegister_etEmail"
                android:backgroundTint="@color/mainColor"
                android:textColor="@color/black_3"
                android:paddingTop="@dimen/_12dp"
                android:paddingBottom="@dimen/_12dp"
                android:textSize="26sp"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@+id/fragRegister_tvEmailTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/fragRegister_tvPasswordTitle"
                android:textColor="@color/black_3"
                android:text="@string/common_password"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragRegister_etEmail" />

            <TextView
                android:id="@+id/fragRegister_tvShow"
                android:text="@string/common_show"
                app:layout_constraintTop_toTopOf="@id/fragRegister_tvPasswordTitle"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/black_3"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/fragRegister_etPassword"
                android:backgroundTint="@color/mainColor"
                android:textColor="@color/black_3"
                android:paddingTop="@dimen/_12dp"
                android:paddingBottom="@dimen/_12dp"
                android:textSize="26sp"
                app:layout_constraintTop_toBottomOf="@id/fragRegister_tvShow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
    
    
    <TextView
        android:id="@+id/fragRegister_tvRegister"
        android:textSize="20sp"
        android:textColor="@color/mainColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_23dp"
        android:padding="@dimen/_8dp"
        android:background="@drawable/shape_register_button"
        android:drawableLeft="@drawable/selector_unlock"
        android:text="@string/auth_register_and_login"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content" />
    
</androidx.constraintlayout.widget.ConstraintLayout>