<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true">
    
    <include layout="@layout/actionbar_back"/>

    <ImageView
        android:id="@+id/fragLogin_ivLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_92dp"
        android:background="@drawable/ic_logo_start_screen"
        android:layout_width="@dimen/_36dp"
        android:layout_height="@dimen/_36dp"
        android:layout_marginStart="@dimen/_23dp"/>

    <TextView
        android:id="@+id/fragLogin_tvTitle"
        android:textSize="48sp"
        android:textColor="@color/mainColor"
        android:text="@string/common_login_title"
        app:layout_constraintStart_toEndOf="@id/fragLogin_ivLogo"
        app:layout_constraintTop_toTopOf="@id/fragLogin_ivLogo"
        app:layout_constraintBottom_toBottomOf="@id/fragLogin_ivLogo"
        android:layout_marginStart="@dimen/_10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/fragLogin_tvEmailTitle"
        android:layout_marginTop="@dimen/_48dp"
        app:layout_constraintTop_toBottomOf="@id/fragLogin_tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/common_email"
        android:textColor="@color/black_3"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_marginStart="@dimen/_23dp"/>

    <EditText
        android:id="@+id/fragLogin_etEmail"
        android:backgroundTint="@color/mainColor"
        android:textColor="@color/black_3"
        android:paddingTop="@dimen/_12dp"
        android:paddingBottom="@dimen/_12dp"
        android:textSize="26sp"
        app:layout_constraintTop_toBottomOf="@+id/fragLogin_tvEmailTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_23dp"
        android:layout_marginEnd="@dimen/_23dp"/>

    <TextView
        android:id="@+id/fragLogin_tvPasswordTitle"
        android:textColor="@color/black_3"
        android:text="@string/common_password"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragLogin_etEmail"
        android:layout_marginStart="@dimen/_23dp"/>

    <TextView
        android:id="@+id/fragLogin_tvShow"
        android:text="@string/common_show"
        app:layout_constraintTop_toTopOf="@id/fragLogin_tvPasswordTitle"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black_3"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_23dp"/>

    <EditText
        android:id="@+id/fragLogin_etPassword"
        android:backgroundTint="@color/mainColor"
        android:textColor="@color/black_3"
        android:paddingTop="@dimen/_12dp"
        android:paddingBottom="@dimen/_12dp"
        android:textSize="26sp"
        app:layout_constraintTop_toBottomOf="@id/fragLogin_tvShow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_23dp"
        android:layout_marginEnd="@dimen/_23dp"/>

    <TextView
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/common_login_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragLogin_etPassword"
        android:layout_marginTop="@dimen/_24dp"
        android:textSize="20sp"
        android:background="@drawable/shape_login_button"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8dp"
        android:layout_marginStart="@dimen/_23dp"
        android:layout_marginEnd="@dimen/_23dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>